Rewrite task 17